--- a/FlowerShop/index.html
+++ b/FlowerShop/index.html
@@ -112,7 +112,7 @@
             display: flex;
             align-items: center;
             min-height: 100vh;
-            background:url(../images/home-bg.jpg) no-repeat;
+            background:url(images/home-bg.jpg) no-repeat;
             background-size: cover;
             background-position: center;
         }
